# Credence-Global

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  clone-guide.txt  fix_a4.py  package.json  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-2-report.md
dev/: README.md
dev/data/: data-architecture.md  data-pipeline-spec.md
dev/design/: report-style-system.md
dev/engine/: closure-check-2026-07-08.md  concentration-framework.md  contagion-matrix.md  contagion-theory.md  dimension-registry.md  dual-track-methodology.md  engine-overview.md  esg-framework.md  external-support-framework.md  false-positive-negative-testing.md  final-review-2026-07-08.md  (+23 more)
docs/: VERSION-MANAGEMENT.md
scripts/: build_contagion_derived.py  build_dist.py  build_template_index.py  consistency_check.py  promote.py  smoke_install.sh
src/: __init__.py  concentration_scorer.py  contagion_engine.py  outlook_engine.py  path_sheet.py  pipeline.py  sri_calculator.py
tests/: test_agents_entry.py  test_concentration_doc_drift.py  test_concentration_scorer.py  test_consistency_check.py  test_contagion_derived.py  test_contagion_engine.py  test_dimension_registry.py  test_dist_package.py  test_engine_coherence.py  test_engine_doc_parity.py  test_integration_v08.py  test_line_endings.py  test_outlook_engine.py  test_path_sheet.py  test_pipeline.py  test_promote.py  test_qa_skill.py  test_report_skill.py  test_router_skill.py  test_sri_calculator.py  test_work_path_registry.py
validation/: README.md
(+601 files in other folders)
